@@ -1,5 +1,5 @@
 
-How to build and install openjpeg3d binaries
+How to build and install openjp3d binaries
 ==========================================
 
 REQUIREMENT : cmake (see www.cmake.org)
