@@ -31,7 +31,7 @@
 #include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
-#include "openjpeg3d.h"
+#include "openjp3d.h"
 #ifdef _WIN32
 #include "windirent.h"
 #else
